'@author Christopher Engelhart

@startuml
'https://plantuml.com/class-diagram
class Company {
    -String company_id
    -String company_name
    -ArrayList<Dealership> list_dealerships

    +add_dealership()
    +ArrayList<Dealership> get_list_dealerships()
    +Dealership find_dealership()

}

class Dealership {
    -final String dealer_id
    -final ArrayList<Vehicle> vehicle_inventory
    -boolean receiving_vehicle

     +add_incoming_vehicle()
     +enable_receiving_vehicle()
     +disable_receiving_vehicle()
     +Boolean getStatus_AcquiringVehicles()
     +ArrayList<Vehicle>getInventory_Vehicles()
}

abstract class Vehicle{
    -String vehicleID
    -String vehicleManufacturer
    -String vehicleModel
    -double vehiclePrice
    -long acquisitionDate
    -String vehicleType
    +Vehicle(String)
}

class SUV extends Vehicle
{
    SUV(){super("SUV")}
}
class Sedan extends Vehicle
{
    Sedan(){super("Sedan"}
}
class Pickup extends Vehicle
{
    Pickup(){super("Pickup")}
}
class Sports_Car extends Vehicle
{
    Sports_Car(){super("Sports_Car")}
}


Dealership "1" --> "*" Vehicle
Company "1" --> "*" Dealership
@enduml